chore: add macOS CI support and update README
- Add macos-latest to build matrix
- Remove Usage section from README
- Add link to API documentation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,10 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest]
         toolchain: [stable, beta]
     steps:
       - uses: actions/checkout@v6
