feat(html-macro): add proc-macro for ergonomic HTML construction
Phase 5 implementation - html! macro with Rust-like syntax:

Syntax features:
- Elements: `div`, `span`, `input`, etc.
- Attributes: `.class("x")`, `.id("y")`, `.href("/")`
- Text content: `{ "Hello" }` or `{ #variable }`
- Nested elements: `div { span { "text" } }`
- Boolean attrs: `.checked`, `.disabled`
- Data/ARIA attrs: `.data_id("1")` -> `data-id="1"`

Control flow:
- for loops: `for item in #items { li { #item } }`
- Conditionals: `if #show { span { "visible" } }`

Features:
- `macros` feature in html-builder enables the macro
- Generates typed Element code with compile-time validation
- 27 integration tests covering all syntax features
- WebAssembly compatible (no_std output)

Example:
```rust
let nav = html! {
    nav.class("navbar") {
        ul {
            li { a.href("/") { "Home" } }
            li { a.href("/about") { "About" } }
        }
    }
};
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ repository = "https://github.com/LeakIX/html-builder"
 [workspace.dependencies]
 html-elements = { path = "crates/html-elements" }
 html-attributes = { path = "crates/html-attributes" }
+html-builder = { path = "crates/html-builder" }
+html-macro = { path = "crates/html-macro" }
+proc-macro2 = "1"
+quote = "1"
+syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
