--- a/crates/html-builder/Cargo.toml
+++ b/crates/html-builder/Cargo.toml
@@ -11,8 +11,10 @@ categories = ["web-programming", "no-std"]
 [dependencies]
 html-elements.workspace = true
 html-attributes.workspace = true
+html-macro = { workspace = true, optional = true }
 
 [features]
 default = ["typed"]
 typed = []
 std = []
+macros = ["html-macro"]
